test/parallel/cobegin/errors/cobeginSyntaxError.good
cobeginSyntaxError.chpl:4: syntax error: near 'count$'
